# NixonCpp

./: .clang-format  .clangd  .gitignore  Doxyfile  LICENSE  Makefile  README.md  meson.build  meson_options.txt
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: ci.yml
assets/: customstrings.json  ems-mini.html
docs/html/: Application_8cpp.html  Application_8cpp.js  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  Application_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  AssetManagerFactory_8hpp.html  AssetManagerFactory_8hpp.js  AssetManagerFactory_8hpp__dep__incl.map  AssetManagerFactory_8hpp__dep__incl.md5  AssetManagerFactory_8hpp__incl.map  AssetManagerFactory_8hpp__incl.md5  AssetManagerFactory_8hpp_source.html  AssetManagerTest_8cpp.html  AssetManagerTest_8cpp.js  AssetManagerTest_8cpp__incl.map  AssetManagerTest_8cpp__incl.md5  AssetManagerTest_8cpp_a08f42620f8e54d3a2e0804f9f064bd94_cgraph.map  AssetManagerTest_8cpp_a08f42620f8e54d3a2e0804f9f064bd94_cgraph.md5  AssetManagerTest_8cpp_a164d13741975afb5bcc7c1850a6bf0b6_cgraph.md5  AssetManagerTest_8cpp_a2101e2c74d1ca5ddb1868403a1cde944_cgraph.map  AssetManagerTest_8cpp_a2101e2c74d1ca5ddb1868403a1cde944_cgraph.md5  AssetManagerTest_8cpp_a250e4f887c3e513f207005b77d41225b_cgraph.md5  AssetManagerTest_8cpp_a3417e38970ad90cc6758a918e14be41e_cgraph.map  AssetManagerTest_8cpp_a3417e38970ad90cc6758a918e14be41e_cgraph.md5  AssetManagerTest_8cpp_a351b0b825a033c19c191b803ef3ed412_cgraph.map  AssetManagerTest_8cpp_a351b0b825a033c19c191b803ef3ed412_cgraph.md5  AssetManagerTest_8cpp_a3aa74e2606d541a5e1427239d1ff2552_cgraph.map  AssetManagerTest_8cpp_a3aa74e2606d541a5e1427239d1ff2552_cgraph.md5  AssetManagerTest_8cpp_a54a1c8e328d04db768b927359b1242d6_cgraph.map  AssetManagerTest_8cpp_a5d60a42a81908ce29588078c1ecb96c2_cgraph.map  AssetManagerTest_8cpp_aac63443e19485c0a868b6262adda0707_cgraph.map  AssetManagerTest_8cpp_aac63443e19485c0a868b6262adda0707_cgraph.md5  AssetManagerTest_8cpp_aba63d46b0b8d94a9532f022fc82f5051_cgraph.map  AssetManagerTest_8cpp_aba63d46b0b8d94a9532f022fc82f5051_cgraph.md5  AssetManagerTest_8cpp_abe136243ace10c032013eac345788425_cgraph.map  AssetManagerTest_8cpp_abe136243ace10c032013eac345788425_cgraph.md5  AssetManagerTest_8cpp_ac253b7e3f2ed7be4c8d97c4dfac98440_cgraph.map  AssetManagerTest_8cpp_afb120c396aab6c89a8f4d65454b3056b_cgraph.md5  AssetManager_8cpp.html  (+971 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  (+58 more)
docs/latex/: Application_8cpp.tex  Application_8cpp__incl.md5  Application_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  AssetManagerFactory_8hpp.tex  AssetManagerFactory_8hpp__dep__incl.md5  AssetManagerFactory_8hpp__incl.md5  AssetManagerFactory_8hpp_source.tex  AssetManagerTest_8cpp.tex  AssetManagerTest_8cpp__incl.md5  AssetManagerTest_8cpp_a2101e2c74d1ca5ddb1868403a1cde944_cgraph.md5  AssetManagerTest_8cpp_a250e4f887c3e513f207005b77d41225b_cgraph.md5  AssetManagerTest_8cpp_a3417e38970ad90cc6758a918e14be41e_cgraph.md5  AssetManagerTest_8cpp_a351b0b825a033c19c191b803ef3ed412_cgraph.md5  AssetManagerTest_8cpp_a3aa74e2606d541a5e1427239d1ff2552_cgraph.md5  AssetManagerTest_8cpp_a54a1c8e328d04db768b927359b1242d6_cgraph.md5  AssetManagerTest_8cpp_a63e0468dad34f3af1a66e5a77ac9d29b_cgraph.md5  AssetManagerTest_8cpp_a68afa704c1ff22c9610fae4172d24bc4_cgraph.md5  AssetManagerTest_8cpp_a72e7299bcf134bbe700f73ac083b9994_cgraph.md5  AssetManagerTest_8cpp_aac63443e19485c0a868b6262adda0707_cgraph.md5  AssetManagerTest_8cpp_aba63d46b0b8d94a9532f022fc82f5051_cgraph.md5  AssetManager_8cpp.tex  AssetManager_8cpp__incl.md5  AssetManager_8hpp.tex  AssetManager_8hpp__dep__incl.md5  AssetManager_8hpp__incl.md5  AssetManager_8hpp_source.tex  ConsoleLoggerTest_8cpp.tex  ConsoleLoggerTest_8cpp__incl.md5  ConsoleLoggerTest_8cpp_a1a488e15957fde4f49e4a0dfc8ee25cc_cgraph.md5  ConsoleLoggerTest_8cpp_a8e9d84d3a553e26e5f81b69d7ca9cecd_cgraph.md5  ConsoleLoggerTest_8cpp_ab35834df4087e6a0d58b5dbefb02da96_cgraph.md5  ConsoleLogger_8hpp.tex  ConsoleLogger_8hpp__dep__incl.md5  ConsoleLogger_8hpp__incl.md5  ConsoleLogger_8hpp_source.tex  CustomStringsLoader_8cpp.tex  CustomStringsLoader_8cpp__incl.md5  CustomStringsLoader_8hpp.tex  CustomStringsLoader_8hpp__dep__incl.md5  CustomStringsLoader_8hpp__incl.md5  (+406 more)
include/NixonCppLib/: NixonCppLib.hpp
nix/: cross-shell-aarch64.nix  cross-shell-wasm.nix  cross-shell-windows.nix  flake.nix  shell.nix
nix/cross/: linux-to-aarch64.ini  linux-to-wasm.ini  linux-to-windows.ini  nixos-native.ini
scripts/: build-cross.sh  build.sh  bundle-aarch64-deps.sh  bundle-deps.sh  clonenixoncpp.sh  emscripten_server.js  emscripten_server.py  package.sh  rename-test.sh  rename.sh  solution-controller.sh
src/app/: Application.cpp
src/lib/: NixonCppLib.cpp
src/lib/Utils/: UtilsError.hpp  UtilsFactory.cpp  UtilsFactory.hpp
src/lib/Utils/Assets/: AssetManager.cpp  AssetManager.hpp  AssetManagerFactory.hpp  IAssetManager.hpp
src/lib/Utils/Filesystem/: DirectoryManager.cpp  DirectoryManager.hpp  FileReader.cpp  FileReader.hpp  FileWriter.cpp  FileWriter.hpp  IDirectoryManager.hpp  IFileReader.hpp  IFileWriter.hpp  IPathResolver.hpp  PathResolver.cpp  PathResolver.hpp
src/lib/Utils/Json/: CustomStringsLoader.cpp  CustomStringsLoader.hpp  ICustomStringsLoader.hpp  IJsonSerializer.hpp  JsonSerializer.cpp  JsonSerializer.hpp
src/lib/Utils/Logger/: ConsoleLogger.hpp  ILogger.hpp  LoggerFactory.cpp  LoggerFactory.hpp  NullLogger.hpp
tests/: AssetManagerTest.cpp  ConsoleLoggerTest.cpp  FileReaderTest.cpp  MockAssetManager.hpp  meson.build
(+13 files in other folders)
