option('build_tests',
  type: 'feature',
  value: 'auto',
  description: 'Enable unit tests (native only)'
)

option('sanitize_address',
  type: 'boolean',
  value: false,
  description: 'Enable AddressSanitizer (native debug/dev only)'
)

option('sanitize_undefined',
  type: 'boolean',
  value: false,
  description: 'Enable UndefinedBehaviorSanitizer (native debug/dev only)'
)

option('sanitize_thread',
  type: 'boolean',
  value: false,
  description: 'Enable ThreadSanitizer (native debug/dev only)'
)

option('wasm_opt_level',
  type: 'combo',
  choices: ['auto', 'O0', 'O1', 'O2', 'O3', 'Os', 'Oz'],
  value: 'auto',
  description: 'Override Emscripten optimization level (auto uses buildtype)'
)
